--- a/valens-tributepage/index.html
+++ b/valens-tributepage/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Valens:TributePage</title>
+  <meta name="viewport" content="width=500, initial-scale=0.2">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
+<link rel="stylesheet" href="./style.css">
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <style>
   .moccasin-background{
     background-color: moccasin;
@@ -25,16 +36,11 @@ background-color: moccasin;
 <div id= "wrap" class="container">
   <div id="wrap" class="jumbotron">
    <div class="row">
-     <div class="moccasin-background">
     <div class="col-md-24">
-      <div class="moccasin-background">
     <h1 class="text-center">Ritchie Valens</h1>
       <h2 class="text-center"><em>The Day The Music Died</em></h1>
-      <div class="mocassin-background">
       <div class="thumbnail text-center"><img src="https://img.buzzfeed.com/buzzfeed-static/static/2015-02/4/11/enhanced/webdr01/original-31917-1423069130-5.jpg?downsize=715:*&output-format=auto&output-quality=auto">
         </div>
-      </div>
-      </div>
       <div class="caption text-center"><big>Ritchie and his guitar</big></div>
        
       <h3 class=" text-center">These are a few key moments in Ritchie Valens's life:</h3>
@@ -52,8 +58,10 @@ background-color: moccasin;
           <iframe width="1000" height="560" src="https://www.youtube.com/embed/jSKJQ18ZoIA" frameborder="0" allowfullscreen
                   </iframe>
           </div>
-        </div>
     </div>
   </div>
     </div>
-     
+<!-- partial -->
+  
+</body>
+</html>
