--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Valens:TributePage</title>
+  <title>Alejandro's Valens:TributePage</title>
   <meta name="viewport" content="width=500, initial-scale=0.2">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
 <link rel="stylesheet" href="./style.css">
