Fixed Ritichie image

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@ background-color: moccasin;
     <div class="col-md-24">
     <h1 class="text-center">Ritchie Valens</h1>
       <h2 class="text-center"><em>The Day The Music Died</em></h1>
-      <div class="thumbnail text-center"><img src="https://img.buzzfeed.com/buzzfeed-static/static/2015-02/4/11/enhanced/webdr01/original-31917-1423069130-5.jpg?downsize=715:*&output-format=auto&output-quality=auto">
-        </div>
+      <img class = "center" src="Ritchie.jpg">
       <div class="caption text-center"><big>Ritchie and his guitar</big></div>
        
       <h3 class=" text-center">These are a few key moments in Ritchie Valens's life:</h3>
